[metadata]
name = reach4me
author = Nicolas Delepine
summary = reach4me is a Python Library that uses different alerting tools to send messages to people.
license = MIT
description_file = README.md
description_content_type = text/markdown
home_page = https://github.com/ndelepine/reach4me
python_requires = >=3.10, <3.13
classifiers=
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src/
packages = reach4me

[extras]
twilio =
    twilio